初始化spring boot , 并测试决策流使用 ,修改决策流编辑界面bug, 修复打印右值为null的bug,修复变量类名拷贝出现空格的bug

--- a/urule-parent/pom.xml
+++ b/urule-parent/pom.xml
@@ -6,6 +6,10 @@
   <properties>
 	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+	<modules>
+		<module>../urule-console</module>
+		<module>../urule-core</module>
+	</modules>
 	<licenses>
 		<license>
 			<name>The Apache License, Version 2.0</name>
@@ -133,20 +137,20 @@
 		        </execution>
 		      </executions>
 		    </plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-gpg-plugin</artifactId>
-				<version>1.5</version>
-				<executions>
-					<execution>
-						<id>sign-artifacts</id>
-						<phase>verify</phase>
-						<goals>
-							<goal>sign</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>		    			
+			<!--<plugin>-->
+				<!--<groupId>org.apache.maven.plugins</groupId>-->
+				<!--<artifactId>maven-gpg-plugin</artifactId>-->
+				<!--<version>1.5</version>-->
+				<!--<executions>-->
+					<!--<execution>-->
+						<!--<id>sign-artifacts</id>-->
+						<!--<phase>verify</phase>-->
+						<!--<goals>-->
+							<!--<goal>sign</goal>-->
+						<!--</goals>-->
+					<!--</execution>-->
+				<!--</executions>-->
+			<!--</plugin>		    			-->
 		</plugins>
 	</build>
 	<distributionManagement>
